# tetris

./: .gitignore  CMakeLists.txt  README.md
src/: log.c  main.c  structure.c  tetromino.c
src/include/: defs.h  log.h  structure.h  tetromino.h
